Fix errors after backport
Signed-off-by: Anders Alfredsson <andersb86@gmail.com>